Changes: *  resolved comment text wrapping *  get correct timie from datetime

--- a/beebloge/static/css/bootstrap.css
+++ b/beebloge/static/css/bootstrap.css
@@ -4393,7 +4393,10 @@ a.badge:hover, a.badge:focus {
   margin-bottom: 15px;
   font-size: 21px;
   font-weight: 200;
+  word-break: break-all
 }
+
+
 .jumbotron > hr {
   border-top-color: #d5d5d5;
 }
@@ -4403,6 +4406,8 @@ a.badge:hover, a.badge:focus {
 .jumbotron .container {
   max-width: 100%;
 }
+
+
 @media screen and (min-width: 768px) {
   .jumbotron {
     padding-top: 48px;
